--- a/MyTaskAPI.csproj
+++ b/MyTaskAPI.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyTaskAPI.Services\MyTaskAPI.Services.csproj" />
+  </ItemGroup>
+
 </Project>
